fix: position the dogs to the right using align-self- the container is a flex

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
 .cellContainer {
     border-radius: 20px;
     background-color:  hsl(270, 20%, 96%);
+    display: flex;
+    flex-direction: column;   
 }
 header {
     padding: 20px;
@@ -19,9 +21,9 @@ header {
 .cellphone {
     width: 300px;   
     background: hsl(0, 0%, 100%);
-    margin: auto;
-    border-radius: 60px;
-    padding: 15px;
+    margin: 20px auto;
+    border-radius: 60px;   
+    padding: 30px 15px;
 }
 figure {
     display: flex;
@@ -41,8 +43,7 @@ figcaption {
 
 .intro {
     position: relative;
-    background: linear-gradient(to right, hsl(264, 100%, 61%),  hsl(293, 100%, 63%));
-    margin-top: 10px;
+    background: linear-gradient(to right, hsl(264, 100%, 61%),  hsl(293, 100%, 63%));   
     display: flex;
     align-items: center;
     border-radius: 20px 20px 5px 5px;
@@ -78,5 +79,10 @@ i.fas {
     color: hsl(276, 55%, 52%);
     border-radius: 15px;
     margin: 8px;
-    border: 1px solid white;
+   /* border: 1px solid white;*/
+}
+.responseSection {
+    width: 60%;
+    margin-right: 5px;
+    margin-top: 10px;
 }
